# alternative-tsukuba-kdb

./: 348.js  README.md  index.html  main.js  script.js
.github/workflows/: main.yml  update-syllabus.yml  update.yml
frontend/: biome.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Syllabi.tsx
frontend/src/components/Header/: Header.tsx  Requirements.tsx  TimeslotsSelection.tsx
frontend/src/components/Header/desktop/: DesktopForm.tsx  SecondLine.tsx
frontend/src/components/Header/mobile/: MobileForm.tsx
frontend/src/components/Main/: ClassroomImport.tsx  CoursePlan.tsx  Main.tsx  MainTableDesktop.tsx  Mobile.tsx  SubjectTr.tsx  parts.tsx
frontend/src/components/Main/CoursePlan/: Index.tsx  SubjectTr.tsx
frontend/src/components/Timetable/: Header.tsx  Index.tsx
frontend/src/kdb/: code-types-undergrad.json  code-types.ts  kdb.json
frontend/src/utils/: search.ts  style.ts  subject.ts  timetable.ts  useBookmark.ts  useClassroom.ts
src/: csv-json.py  download.py  index.html  kdb.json
src/kdb/: code-types-grad.json  code-types-undergrad.json
src/subject/: render.ts
tools/: .gitignore  README.md  code-types-undergrad.json  package.json  pyproject.toml
tools/python/: csv-json.py  download.py
tools/src/: code-types-generator.ts  code-types-grad.ts  code-types-undergrad.ts  download-grad.ts  download-undergrad.ts  downloader.ts
